# mydm

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
nix/modules/: nixosService.nix
nix/tests/: default.nix  launch.nix  lib.nix
src/: auth.rs  config.rs  desktops.rs  main.rs  ui.rs
