[package]
name = "mydm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
eframe = "0.30.0"
egui = "0.30.0"
egui_extras = { version = "0.30.0", features = ["image"] }
env_logger = "0.11.6"
figment = { version = "0.10.19", features = ["yaml"] }
log = "0.4.25"
pam = "0.8.0"
serde = "1.0.217"
uzers = "0.12.1"

[dev-dependencies]
rstest = "0.24.0"
tempfile = "3.16.0"
